--- a/style.less
+++ b/style.less
@@ -3414,6 +3414,10 @@ input.help-search {
 	right: 0;
 	top: 0;
 
+	@media(max-width:@screen-xs-max) {
+		top: -14px;
+	}
+
 	.message-starred &,
 	.message-not-starred & {
 		right: 30px;
